--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-        <script src="../js/index.js"></script>
+        <script src="../public/js/index.js"></script>
     </body>
 
 </html>
