--- a/html/hour_readings.html
+++ b/html/hour_readings.html
@@ -20,31 +20,15 @@
     <link rel="stylesheet" href="../css/index.css">
     <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <h1 class="text-center">Избери компания</h1>
-        <label class="container">EVN
-            <input type="radio" id="evn" name="radio">
-            <span class="checkmark"></span>
-        </label>
-        <label class="container">CEZ
-            <input type="radio" id="cez" name="radio">
-            <span class="checkmark"></span>
-        </label>
-        <label class="container">Energo-pro
-            <input type="radio" id="energo-pro" name="radio">
-            <span class="checkmark"></span>
-        </label>
+    <h1 class="text-center">HOUR READINGS</h1>
+    <div class="form-group" id="input-excel">
+        <label for="exampleFormControlTextarea1"></label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 
-    <body>
-        <div class="form-group" id="input-excel">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-        <script src="../public/js/index.js"></script>
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
+    <script src="../public/js/hour-readings.js"></script>
+</body>
 
 </html>
