--- a/html/hour_readingsMultiImport.html
+++ b/html/hour_readingsMultiImport.html
@@ -22,14 +22,26 @@
 </head>
 
 <body>
-    <h1 class="text-center">IMPORT HOUR READINGS - CEZ</h1>
+    <div class="container">
+        <h1 class="text-center">Избери компания</h1>
+        <label class="container">EVN
+            <input type="radio" id="evn" name="radio">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Energo-pro
+            <input type="radio" id="energo-pro" name="radio">
+            <span class="checkmark"></span>
+        </label>
+    </div>
+
+    <h1 class="text-center">IMPORT ALL HOUR READINGS - EVN / EnergoPRO</h1>
     <div class="form-group" id="input-excel">
         <label for="exampleFormControlTextarea1"></label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-    <script src="../public/js/hour-readings.js"></script>
+    <script src="../public/js/import-all-hour-readings.js"></script>
 </body>
 
 </html>
